spacing issues on the front page

--- a/src/components/Welcome/Welcome.scss
+++ b/src/components/Welcome/Welcome.scss
@@ -16,7 +16,7 @@
     align-items: flex-start;
     flex-direction: column;
     max-width: 640px;
-    margin-top: 20px;
+    margin-top: 0;
     @include mq(xs) {
         max-width: 90%;
     }
@@ -39,12 +39,13 @@
     }
 }
 
-h1 {
+.welcometitle {
     text-align: left;
     @extend %font-stack-main;
     font-weight: 700;
     font-size: 30px;
     margin-bottom: 0.2em;
+    margin-top: 0;
 }
 
 h2.subHeader {
@@ -65,7 +66,7 @@ h2.subHeader {
 
 .about {
     text-align: left;
-    margin-bottom: 8vh;
+    margin-bottom: 0.8em;
     display: block;
     font-size: 15px;
 }
@@ -169,8 +170,7 @@ h2 {
     margin: 0 auto;
     line-height: 1.6em;
     color: $design-faded;
-    margin-top: 1em;
-    margin-bottom: 30px;
+    margin-top: 0.6em;
     text-align: center;
 
     font-weight: 300;
